# temp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  hello.cpp  main.cpp  t2.cpp  t3.cpp  t4  t4.cpp  t5.cpp  ttt.cpp
.github/workflows/: build_and_test_on_ubuntu_2204.yml  clang_tidy.yml  clang_tidy2.yml  code_coverage.yml  group_logs.yml  multiply-run.yml  pr.yml  schedule.yml  status.yml  strategy_and_matrix.yml  super_linter.yml  test_use_docker_cache.yml  ubuntu-webhook.yml  watch.yml  webhook.yml  workflow_dispatch.yml  workrun.yml
tools/compiler/: README.md  install_clang.sh  install_gcc_use_ppa_on_ubuntu2204.sh
tools/compiler/ubuntu2204/: install_gcc_9_13_use_ppa.sh  install_gcc_by_homebrew.sh
tools/package_management/: install_homebrew_on_ubuntu2404.sh
tools/package_manager/: README.md  install_homebrew_on_ubuntu2404.sh
tools/package_manager/ubuntu/: install_homebrew.sh  install_snap.sh
